@@ -1897,6 +1897,18 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 	}
 
 	/**
+	 * Returns the UID of the event type for the selector widget that was
+	 * selected for this event. If no event type has been set, -1 will be
+	 * returned.
+	 *
+	 * @return	integer		UID of the event type for this event or -1 if no
+	 * 						event type is set
+	 */
+	function getEventTypeUidForSelectorWidget() {
+		return $this->hasEventType() ? $this->getEventTypeUid() : -1;
+	}
+
+	/**
 	 * Returns the event type as a string (e.g. "Workshop" or "Lecture").
 	 * If the seminar has a event type selected, that one is returned. Otherwise
 	 * the global event type from the TS setup is returned.
@@ -1940,6 +1952,15 @@ class tx_seminars_seminar extends tx_seminars_timespan {
 		}
 
 		return $result;
+	}
+
+	/**
+	 * Sets the event type for this event.
+	 *
+	 * @param	integer		the UID of the event type to set, must be >= 0
+	 */
+	public function setEventType($eventType) {
+		$this->setRecordPropertyInteger('event_type', $eventType);
 	}
 
 	/**
